src/styles/themes/_gaming-theme.scss
[data-theme="gaming"] {
  // Page
  --page-background: rgba(41, 79, 96, 1);
  --page-font-family: "Orbitron-Bold";

  // Haeder Menu
  --background-color-header-menu: rgba(83, 93, 117);
  --header-menu-margin-top: 40px;
  --header-align-itmes: center;
  --header-element-width: 182px;
  --header-element-height: 54px;
  --header-element-radius: 10px;
  --header-element-margin: 32px;
  // Score board
  --score-bord-background-color: rgba(255, 255, 255, 1);
  --score-bord-score-text-font-size: 30px;
  --score-bord-score-text-padding: 8px;

  // Player
  --player-text-font-size: 32px;
  --player-text-font-color: rgba(255, 255, 255, 1);
  --player-text-margin-right: 16px;
  --player-one-background-color: rgba(31, 170, 252, 1);
  --player-two-background-color: rgba(234, 105, 0, 1);
  --player-icon-border-radius: 3px;
  --player-icon-size: 40px;
  --player-icon-img-width: 25px;
  --player-icon-img-height: 32px;

  // Exit button
  --exit-button-border: 2px solid rgba(231, 28, 79, 1);
  --exit-button-margin-right: 8px;
  --exit-button-background-color: rgba(237, 27, 118, 0.08);
  --exit-button-text-color: rgba(255, 255, 255, 1);

  // Card-field
  --card-field-margin-top: 48px;

  // Cards
  --card-width: 105px;
  --card-eight: 120px;
  --card-background-image: linear-gradient(
    30deg,
    rgba(10, 40, 53, 1) 0%,
    rgba(237, 27, 118, 1) 80%
  );
  --card-border-radius: 12px;
  --card-margin: 4px;

  // Dialog
  --dialog-width: 481px;
  --dialog-height: 254px;
  --dialog-border-radius: 20px;
  --dialog-background-color: rgba(240, 246, 249, 1);
  --dialog-text-font-size: 28px;
  --dialog-text-color: rgba(41, 79, 96, 1);

  // Dialog buttons
  --dialog-button-font-family: "Orbitron-Bold";
  --dialog-button-font-size: 16px;
  --dialog-button-letter-spacing: 4%;
  --dialog-button-padding: 16px;
  --dialog-button-borderradius: 10px;
  // Dialog button stay
  --dialog-button-stay-border: 2px solid rgba(231, 28, 79, 1);
  --dialog-button-stay-background-color: rgba(237, 27, 118, 1);
  --dialog-button-stay-color: rgba(255, 255, 255, 1);
  // Dialog button stay hover
  --dialog-button-stay-hover-border: 2px solid rgba(231, 28, 79, 1);
  --dialog-button-stay-hover-background-color: rgba(237, 27, 118, 0.08);
  --dialog-button-stay-hover-color: rgba(237, 27, 118, 1);
  // Dialog button exit
  --dialog-button-exit-border: 1px solid rgba(231, 28, 79, 1);
  --dialog-button-exit-background-color: rgba(237, 27, 118, 0.08);
  --dialog-button-exit-color: rgba(237, 27, 118, 1);
  // Dialog button exit hover
  --dialog-button-exit-hover-background-color: rgba(242, 199, 218, 0.08);
  --dialog-button-exit-hover-color: rgba(237, 27, 118, 1);
  --dialog-button-exit-hover-boxshadow:
    inset 0 0 0 1px rgba(231, 28, 79, 1), 3px 3px 5px rgba(0, 0, 0, 0.45);

  // Game over Screen
  --game-over-page-width: 100wh;
  --game-over-page-height: 100vh;

  --game-over-header-fontsize: 124px;
  --game-over-header-color: #ed1b76;
  --game-over-header-font-family: "Orbitron-Bold", Arial, Helvetica, sans-serif;
  --game-over-header-margin-bottom: 100px;

  --game-over-score-fontsize: 28px;
  --game-over-score-header-color: #ffffff;
  --game-over-score-header-text-align: center;
  --game-over-score-header-font-family:
    "Orbitron-Bold", Arial, Helvetica, sans-serif;
  // Winner Screen
  --game-over-score-overview-display: flex;
  --game-over-score-overview-align-items: center;
  --game-over-score-overview-justify-content: space-around;
  --game-over-score-overview-background-color: #ffffff;
  --game-over-score-overview-padding: 8px;
  --game-over-score-overview-border-radius: 10px;
  --game-over-score-overview-margin-top: 24px;
  --game-over-score-overview-gap: 32px;

    --game-over-score-img-width: 26px;
    --game-over-score-img-height: 32px;
    --game-over-score-img-margin-right: 8px;

    --game-over-score-player-display: flex;
    --game-over-score-player-align-items: center;
    --game-over-score-player-font-size: 40px;

--game-over-score-player-one-color: #097fc5;
--game-over-score-player-two-color: #ea6900;


  /*
  //das muss in eine IF abfrage, wenn größer 24 Cards dann das hier! 
  @media (max-height: 600px) {
    // Haeder Menu
  --header-menu-margin-top: 8px;

  // Card-field
  --card-field-margin-top: 16px;

    // Cards
  --card-margin: 2px;
  } */
}

